# LAak-interpreter

./: .gitignore  CMakeLists.txt  LICENSE  README.md  imgui
doc/: matrix
include/: Graphics.h  LA.h  LAakHandler.h  LAakTable.h  LuaHandler.h  LuaUtilLib.h  MatVec.h  Matrix.h  Vector.h  WindowMgr.h
scripts/: matimg.lua  matrix-vector_eg.lua  new.lua  nnfs_p3.lua  nnfs_p4.lua  nnfs_p5.lua  tmp.lua  vectors.lua  vectst.lua
src/: Graphics.cc  LA.cc  LAakHandler.cc  LuaHandler.cc  Matrix.cc  Vector.cc  WindowMgr.cc  main.cc
